--- a/SoftwareRendererLib/SoftwareRendererLib.vcxproj
+++ b/SoftwareRendererLib/SoftwareRendererLib.vcxproj
@@ -77,12 +77,14 @@
     <ClInclude Include="grapfuncs.h" />
     <ClInclude Include="graphtypes.h" />
     <ClInclude Include="renderer2d.h" />
+    <ClInclude Include="renderer3d.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="graphtypes.cpp" />
     <ClCompile Include="renderer2d.cpp" />
+    <ClCompile Include="renderer3d.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
