--- a/SoftwareRendererLib/SoftwareRendererLib.vcxproj.filters
+++ b/SoftwareRendererLib/SoftwareRendererLib.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="renderer2d.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="renderer3d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="renderer2d.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="renderer3d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
